--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -30,16 +30,17 @@
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    width: 100vw;
+    bottom: 0;
+    height: 100vh;
+    width: 12vmin;
     z-index: 100;
+    display: flex;
+    justify-content: center;
 
     .compass-container {
-      position: absolute;
-      top: 1vh;
-      left: 1vw;
-      height: 9vmin;
-      width: 9vmin;
+      margin-top: 1vh;
+      height: 8vmin;
+      width: 8vmin;
       cursor: pointer;
       transition: all 300ms ease-in-out;
       opacity: 0;
@@ -56,32 +57,36 @@
     }
 
     .link-container {
-      width: 90vw;
+      height: 80vh;
       position: absolute;
       display: flex;
-      margin-left: 10vw;
+      flex-direction: column;
+      margin-top: 10vh;
       justify-content: space-around;
+      align-items: center;
 
       .link {
-        transform: translateY(-10vh);
+        transform: translateX(-15vw);
 
         .link-name {
           position: absolute;
-          top: 12vh;
+          top: 10vh;
           opacity: 0;
         }
       }
 
       .open {
-        transform: translateY(0) !important;
+        transform: translateX(0) !important;
 
         .light-beam {
           position: absolute;
-          bottom: 2vh;
+          bottom: 4vh;
           background-color: transparent;
           width: 2vw;
-          height: 6vh;
+          height: 4vh;
           border-radius: 50%;
+          border-bottom-left-radius: 0%;
+          border-bottom-right-radius: 0%;
           box-shadow: 0 8vh 3vh 1vh rgba(20, 200, 249, 1);
           animation: float 1000ms infinite;
         }
@@ -98,8 +103,8 @@
     }
 
     .link {
-      height: 9vmin;
-      width: 9vmin;
+      height: 8vmin;
+      width: 8vmin;
       color: white;
       display: flex;
       justify-content: center;
@@ -227,7 +232,7 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -60%) rotate(-15deg);
+      transform: translate(-50%, -60%) rotate(-20deg);
       font-size: 14vmin;
       color: var(--light-off);
       box-sizing: border-box;
@@ -415,16 +420,43 @@
      }
    }
   
-  /* ------------------------------------------ ABOUT VIEW --------------------------------- */
+  /* ------------------------------------------ ABOUT --------------------------------- */
   
+   @keyframes no-gravity {
+     0% {
+       transform: translate(0%, 0%);
+     }
+     13% {
+      transform: translate(-5%, -4%);
+     }
+     26% {
+      transform: translate(0%, -7%);
+     }
+     39% {
+      transform: translate(5%, -4%);
+     }
+     52% {
+      transform: translate(0%, 0%);
+     }
+     65% {
+      transform: translate(-5%, 4%);
+     }
+     78% {
+      transform: translate(0%, 7%);
+     }
+     91% {
+      transform: translate(5%, 4%);
+     }
+     100%{
+      transform: translate(0%, 0%);
+     }
+   }
+
   .About {
     box-sizing: border-box;
-    padding: 10vh 0 10vh 0;
+    padding: 5vh 0;
     height: 100vh;
     width: 100vw;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
     color: white;
     position: absolute;
     top: 50%;
@@ -432,48 +464,200 @@
     transform: translate(-100%, -50%);
   }
   
-  .About i {
-    color: white;
-  }
-  
-  .About .title {
-    font-size: 35px;
-    z-index: 2;
-  }
-  
-  .About .title h2 {
-    margin: 0;
-  }
-  
-  .maps-container {
-    margin-top: 5vh;
-    width: 100%;
+  .about-links-container {
+    position: absolute;
     display: flex;
-    justify-content: space-around;
+    width: 40vmin;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    justify-content: space-between; 
     align-items: center;
+    z-index: 100;
+
+    // .about-links:nth-of-type(1) {
+    //   animation-delay: -2000ms;
+    // }
+
+    // .about-links:nth-of-type(2) {
+    //   animation-delay: -5000ms;
+    // }
+
+    // .about-links:nth-of-type(3) {
+    //   animation-delay: -7000ms;
+    // }
+    
+    .about-links {
+      border: .5px solid #fdfdfd;
+      box-shadow: 0 0 2vmin .4vmin #c90819, 0 0 2vmin .4vmin #c90819 inset;
+      border-radius: 50%;
+      width: 10vmin;
+      height: 10vmin;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      // animation: no-gravity 8000ms infinite;
+    }
+
+    .about-links:hover {
+      box-shadow: 0 0 3vmin .8vmin #c90819, 0 0 3vmin .8vmin #c90819 inset;
+    }
   }
-  
-  .About .paragraph {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
+  .portrait-container {
+    height: 30vmin;
+    width: 30vmin;
+    border: 10px solid white;
+    box-shadow: 0 0 2vmin .5vmin #fff, 0 0 3vmin .8vmin #fff inset;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 40%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 40%;
+    animation: squigglyBorder 3000ms infinite;
+
+    img {
+      width: 100%;
+      position: absolute;
+      top: 0%;
+      left: 50%;
+      transform: translate(-50%, -0%);
+    }
   }
-  
-  .About .paragraph img {
-    height: 10vh;
-    transition: all 300ms linear;
-    filter: invert(100%) sepia(0%) saturate(7486%) hue-rotate(305deg) brightness(116%) contrast(96%);
+
+  @keyframes squigglyBorder{
+    0% {
+      border-top-left-radius: 50%;
+      border-top-right-radius: 40%;
+      border-bottom-right-radius: 50%;
+      border-bottom-left-radius: 40%;
+    }
+    25% {
+      border-top-left-radius: 40%;
+      border-top-right-radius: 50%;
+      border-bottom-right-radius: 40%;
+      border-bottom-left-radius: 50%;
+    }
+    50% {
+      border-top-left-radius: 50%;
+      border-top-right-radius: 40%;
+      border-bottom-right-radius: 50%;
+      border-bottom-left-radius: 40%;
+    }
+    75% {
+      border-top-left-radius: 40%;
+      border-top-right-radius: 50%;
+      border-bottom-right-radius: 40%;
+      border-bottom-left-radius: 50%;
+    }
+    100% {
+      border-top-left-radius: 50%;
+      border-top-right-radius: 40%;
+      border-bottom-right-radius: 50%;
+      border-bottom-left-radius: 40%;
+    }
   }
-  
-  .About .paragraph p {
-    max-width: 800px;
-    width: 90%;
-    line-height: 24px;
+
+  .description {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
     text-align: center;
-    font-size: 2.3vmin;
-    margin: 5vh auto;
-    text-shadow: 0 0 20px black;
+  }
+
+  .about-section {
+    color: transparent;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    width: 90%;
+    transform: translate(-50%, -50%);
+    transition: all 300ms ease-in-out;
+  }
+
+  .bio {  
+    display: flex;
+    width: 90%;
+    justify-content: space-around;
+
+    .section {
+      height: 30vh;
+      display: grid;
+      grid-template-rows: 14vmin 1fr;
+      flex-basis: 30%;
+      text-align: center;
+    }
+
+    img {
+      grid-row: 1 / 2;
+      height: 10vmin;
+      margin: auto;
+      filter: opacity(0);
+      transition: all 300ms ease-in-out;
+    }
+
+    p {
+      grid-row: 2 / 3;
+      margin: 2vmin auto auto auto;
+    }
+  }
+
+  .dev-bio {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+
+    p {
+      flex-basis: 100%;
+    }
+  }
+
+  .hobbies {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 30vh;
+
+    p {
+      flex-basis: 100%;
+      text-align: center;
+    }
+
+    .hobbies-container {
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+
+      img {
+        filter: opacity(0);
+        height: 10vmin;
+        transition: all 300ms ease-in-out;
+      }
+    }
+
+  }
+
+  .open-section {
+    color: white;
+
+    img {
+      filter: opacity(1);
+    }
+
+    .hobbies-container {
+      img {
+        filter: invert(100%) sepia(35%) saturate(1245%) hue-rotate(211deg) brightness(113%) contrast(100%);
+      }
+    }
   }
   
   /* ----------------------------------- PROJECTS VIEW ------------------------------------ */
@@ -647,9 +831,7 @@
   }
   
   .Contact .title h2 {
-    font-family: 'Sacramento', cursive;
-    color: #feffff;
-    text-shadow: 0 -5vh 10vh, 0 0 5px, 0 0 1em #ffffff, 0 0 0.5em #ffffff, 0 0 0.1em #ffffff, 0 10px 3px #000;
+    color: #fff;
     font-size: 8vmin;
     margin: 0;
   }
