--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,8 +13,8 @@
   background-image: url(../space.jpg);
   background-size: 1000px;
   background-repeat: repeat;
-  height: 1000vh;
-  width: 1000vw;
+  height: 500vh;
+  width: 500vw;
   position: relative;
 }
 
@@ -383,7 +383,7 @@ a:visited {
   -webkit-transform: translate(-50%, -60%) rotate(-20deg);
           transform: translate(-50%, -60%) rotate(-20deg);
   font-size: 14vmin;
-  color: var(--light-off);
+  color: transparent;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   line-height: 1em;
