--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,8 +13,8 @@
   background-image: url(../space.jpg);
   background-size: 1000px;
   background-repeat: repeat;
-  height: 500vh;
-  width: 500vw;
+  height: 600vh;
+  width: 600vw;
   position: relative;
 }
 
@@ -25,47 +25,38 @@
 }
 
 /* NAV BAR */
-.Nav {
+.compass-container {
   position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  height: 100vh;
-  width: 12vmin;
-  z-index: 100;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.Nav .compass-container {
-  margin-top: 1vh;
+  top: 1vh;
+  left: 1vw;
   height: 8vmin;
   width: 8vmin;
   cursor: pointer;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
-  opacity: 0;
+  z-index: 100;
 }
 
-.Nav .compass-container img {
+.compass-container img {
   height: 100%;
   width: 100%;
   -webkit-filter: invert(97%) sepia(78%) saturate(1339%) hue-rotate(189deg) brightness(107%) contrast(103%) drop-shadow(0 0 1vmin #d2357b);
           filter: invert(97%) sepia(78%) saturate(1339%) hue-rotate(189deg) brightness(107%) contrast(103%) drop-shadow(0 0 1vmin #d2357b);
 }
 
-.Nav .compass-container:hover {
+.compass-container:hover {
   -webkit-transform: rotate(15deg);
           transform: rotate(15deg);
 }
 
-.Nav .link-container {
-  height: 80vh;
+.Nav {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100vw;
+  height: 100vh;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -73,107 +64,22 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-top: 10vh;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.Nav .link-container .link {
-  -webkit-transform: translateX(-15vw);
-          transform: translateX(-15vw);
-}
-
-.Nav .link-container .link .link-name {
-  position: absolute;
-  top: 10vh;
-  opacity: 0;
-}
-
-.Nav .link-container .open {
-  -webkit-transform: translateX(0) !important;
-          transform: translateX(0) !important;
-}
-
-.Nav .link-container .open .light-beam {
-  position: absolute;
-  bottom: 4vh;
-  background-color: transparent;
-  width: 2vw;
-  height: 4vh;
-  border-radius: 50%;
-  border-bottom-left-radius: 0%;
-  border-bottom-right-radius: 0%;
-  -webkit-box-shadow: 0 8vh 3vh 1vh #14c8f9;
-          box-shadow: 0 8vh 3vh 1vh #14c8f9;
-  -webkit-animation: float 1000ms infinite;
-          animation: float 1000ms infinite;
-}
-
-.Nav .link-container .open .link-name {
-  opacity: 1;
-  text-shadow: .1vmin .1vmin black, -.1vmin -.1vmin black, -.1vmin .1vmin black, .1vmin -.1vmin black;
-}
-
-.Nav .link-container .open img {
-  -webkit-animation: float 1000ms infinite;
-          animation: float 1000ms infinite;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .Nav .link {
-  height: 8vmin;
-  width: 8vmin;
-  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   cursor: pointer;
-  -webkit-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-}
-
-.Nav .link img {
-  height: 100%;
-  -webkit-filter: invert(82%) sepia(45%) saturate(436%) hue-rotate(94deg) brightness(101%) contrast(99%);
-          filter: invert(82%) sepia(45%) saturate(436%) hue-rotate(94deg) brightness(101%) contrast(99%);
-}
-
-@-webkit-keyframes float {
-  0% {
-    -webkit-transform: translate(0%, 0%);
-            transform: translate(0%, 0%);
-  }
-  50% {
-    -webkit-transform: translate(0%, 5%);
-            transform: translate(0%, 5%);
-  }
-  100% {
-    -webkit-transform: translate(0%, 0%);
-            transform: translate(0%, 0%);
-  }
-}
-
-@keyframes float {
-  0% {
-    -webkit-transform: translate(0%, 0%);
-            transform: translate(0%, 0%);
-  }
-  50% {
-    -webkit-transform: translate(0%, 5%);
-            transform: translate(0%, 5%);
-  }
-  100% {
-    -webkit-transform: translate(0%, 0%);
-            transform: translate(0%, 0%);
-  }
+  font-size: 10vmin;
+  color: white;
+  font-family: 'Sacramento', cursive;
+  font-family: 'Codystar', cursive;
 }
 
 /* GENERAL STYLES */
@@ -880,7 +786,8 @@ a:visited {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 40vmin;
+  width: 50vmin;
+  min-width: 280px;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -896,11 +803,11 @@ a:visited {
 
 .about-links-container .about-links {
   border: .5px solid #fdfdfd;
-  -webkit-box-shadow: 0 0 2vmin .4vmin #c90819, 0 0 2vmin .4vmin #c90819 inset;
-          box-shadow: 0 0 2vmin .4vmin #c90819, 0 0 2vmin .4vmin #c90819 inset;
-  border-radius: 50%;
+  -webkit-box-shadow: 0 0 2vmin .4vmin #1b05d2, 0 0 2vmin .4vmin #1b05d2 inset;
+          box-shadow: 0 0 2vmin .4vmin #1b05d2, 0 0 2vmin .4vmin #1b05d2 inset;
+  border-radius: 10px;
   width: 10vmin;
-  height: 10vmin;
+  height: 5vmin;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -911,11 +818,12 @@ a:visited {
       -ms-flex-align: center;
           align-items: center;
   cursor: pointer;
+  padding: 1vmin;
 }
 
 .about-links-container .about-links:hover {
-  -webkit-box-shadow: 0 0 3vmin .8vmin #c90819, 0 0 3vmin .8vmin #c90819 inset;
-          box-shadow: 0 0 3vmin .8vmin #c90819, 0 0 3vmin .8vmin #c90819 inset;
+  -webkit-box-shadow: 0 0 3vmin .8vmin #1b05d2, 0 0 3vmin .8vmin #1b05d2 inset;
+          box-shadow: 0 0 3vmin .8vmin #1b05d2, 0 0 3vmin .8vmin #1b05d2 inset;
 }
 
 .portrait-container {
