--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,7 +9,6 @@
 
 .App {
   overflow: hidden;
-  background-color: black;
   background-image: url(../space.jpg);
   background-size: 1000px;
   background-repeat: repeat;
@@ -78,8 +77,7 @@
   cursor: pointer;
   font-size: 10vmin;
   color: white;
-  font-family: 'Sacramento', cursive;
-  font-family: 'Codystar', cursive;
+  font-family: 'Raleway Dots', cursive;
 }
 
 /* GENERAL STYLES */
@@ -781,51 +779,6 @@ a:visited {
           transform: translate(-100%, -50%);
 }
 
-.about-links-container {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 50vmin;
-  min-width: 280px;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  z-index: 100;
-}
-
-.about-links-container .about-links {
-  border: .5px solid #fdfdfd;
-  -webkit-box-shadow: 0 0 2vmin .4vmin #1b05d2, 0 0 2vmin .4vmin #1b05d2 inset;
-          box-shadow: 0 0 2vmin .4vmin #1b05d2, 0 0 2vmin .4vmin #1b05d2 inset;
-  border-radius: 10px;
-  width: 10vmin;
-  height: 5vmin;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  cursor: pointer;
-  padding: 1vmin;
-}
-
-.about-links-container .about-links:hover {
-  -webkit-box-shadow: 0 0 3vmin .8vmin #1b05d2, 0 0 3vmin .8vmin #1b05d2 inset;
-          box-shadow: 0 0 3vmin .8vmin #1b05d2, 0 0 3vmin .8vmin #1b05d2 inset;
-}
-
 .portrait-container {
   height: 30vmin;
   width: 30vmin;
@@ -833,7 +786,7 @@ a:visited {
   -webkit-box-shadow: 0 0 2vmin .5vmin #fff, 0 0 3vmin .8vmin #fff inset;
           box-shadow: 0 0 2vmin .5vmin #fff, 0 0 3vmin .8vmin #fff inset;
   position: absolute;
-  top: 20%;
+  top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -923,7 +876,7 @@ a:visited {
 
 .description {
   position: absolute;
-  top: 40%;
+  top: 10%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -931,58 +884,15 @@ a:visited {
   text-align: center;
 }
 
-.about-section {
-  color: transparent;
+.tech-icon-container {
   position: absolute;
-  top: 75%;
+  top: 80%;
   left: 50%;
-  width: 90%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  -webkit-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-}
-
-.bio {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 90%;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.bio .section {
-  height: 30vh;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: 14vmin 1fr;
-      grid-template-rows: 14vmin 1fr;
-  -ms-flex-preferred-size: 30%;
-      flex-basis: 30%;
-  text-align: center;
-}
-
-.bio img {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1 / 2;
-  height: 10vmin;
-  margin: auto;
-  -webkit-filter: opacity(0);
-          filter: opacity(0);
-  -webkit-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-}
-
-.bio p {
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2 / 3;
-  margin: 2vmin auto auto auto;
-}
-
-.dev-bio {
+  border: 1px solid red;
+  height: 15vmin;
+  width: 60vmin;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -992,63 +902,10 @@ a:visited {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  text-align: center;
 }
 
-.dev-bio p {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-}
-
-.hobbies {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  height: 30vh;
-}
-
-.hobbies p {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-  text-align: center;
-}
-
-.hobbies .hobbies-container {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.hobbies .hobbies-container img {
-  -webkit-filter: opacity(0);
-          filter: opacity(0);
+.tech-icon-container img {
   height: 10vmin;
-  -webkit-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-}
-
-.open-section {
-  color: white;
-}
-
-.open-section img {
-  -webkit-filter: opacity(1);
-          filter: opacity(1);
-}
-
-.open-section .hobbies-container img {
-  -webkit-filter: invert(100%) sepia(35%) saturate(1245%) hue-rotate(211deg) brightness(113%) contrast(100%);
-          filter: invert(100%) sepia(35%) saturate(1245%) hue-rotate(211deg) brightness(113%) contrast(100%);
 }
 
 /* ----------------------------------- PROJECTS VIEW ------------------------------------ */
@@ -1061,6 +918,8 @@ a:visited {
   left: 0;
   -webkit-transform: translate(0, -50%);
           transform: translate(0, -50%);
+  -webkit-perspective: 1500px;
+          perspective: 1500px;
 }
 
 .project {
@@ -1130,6 +989,8 @@ a:visited {
   max-height: 60vh;
   width: auto;
   height: auto;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
 }
 
 .project-title {
@@ -1245,6 +1106,7 @@ a:visited {
   color: #fff;
   font-size: 8vmin;
   margin: 0;
+  font-family: 'Fredoka One', cursive;
 }
 
 .Contact .button {
