--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,7 +9,6 @@
   
   .App {
     overflow: hidden;
-    background-color: black;
     background-image: url(../space.jpg);
     background-size: 1000px;
     background-repeat: repeat;
@@ -64,8 +63,7 @@
       cursor: pointer;
       font-size: 10vmin;
       color: white;
-      font-family: 'Sacramento', cursive;
-      font-family: 'Codystar', cursive;
+      font-family: 'Raleway Dots', cursive;
     }
   }
 
@@ -404,36 +402,6 @@
     left: 100%;
     transform: translate(-100%, -50%);
   }
-  
-  .about-links-container {
-    position: absolute;
-    display: flex;
-    width: 50vmin;
-    min-width: 280px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    justify-content: space-between; 
-    align-items: center;
-    z-index: 100;
-    
-    .about-links {
-      border: .5px solid #fdfdfd;
-      box-shadow: 0 0 2vmin .4vmin #1b05d2, 0 0 2vmin .4vmin #1b05d2 inset;
-      border-radius: 10px;
-      width: 10vmin;
-      height: 5vmin;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      padding: 1vmin;
-    }
-
-    .about-links:hover {
-      box-shadow: 0 0 3vmin .8vmin #1b05d2, 0 0 3vmin .8vmin #1b05d2 inset;
-    }
-  }
 
   .portrait-container {
     height: 30vmin;
@@ -441,7 +409,7 @@
     border: 10px solid white;
     box-shadow: 0 0 2vmin .5vmin #fff, 0 0 3vmin .8vmin #fff inset;
     position: absolute;
-    top: 20%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: hidden;
@@ -495,98 +463,27 @@
 
   .description {
     position: absolute;
-    top: 40%;
+    top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
     text-align: center;
   }
 
-  .about-section {
-    color: transparent;
+  .tech-icon-container {
     position: absolute;
-    top: 75%;
+    top: 80%;
     left: 50%;
-    width: 90%;
     transform: translate(-50%, -50%);
-    transition: all 300ms ease-in-out;
-  }
-
-  .bio {  
-    display: flex;
-    width: 90%;
-    justify-content: space-around;
-
-    .section {
-      height: 30vh;
-      display: grid;
-      grid-template-rows: 14vmin 1fr;
-      flex-basis: 30%;
-      text-align: center;
-    }
-
-    img {
-      grid-row: 1 / 2;
-      height: 10vmin;
-      margin: auto;
-      filter: opacity(0);
-      transition: all 300ms ease-in-out;
-    }
-
-    p {
-      grid-row: 2 / 3;
-      margin: 2vmin auto auto auto;
-    }
-  }
-
-  .dev-bio {
+    border: 1px solid red;
+    height: 15vmin;
+    width: 60vmin;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    text-align: center;
-
-    p {
-      flex-basis: 100%;
-    }
-  }
-
-  .hobbies {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    height: 30vh;
-
-    p {
-      flex-basis: 100%;
-      text-align: center;
-    }
-
-    .hobbies-container {
-      width: 100%;
-      display: flex;
-      justify-content: space-around;
-
-      img {
-        filter: opacity(0);
-        height: 10vmin;
-        transition: all 300ms ease-in-out;
-      }
-    }
-
-  }
-
-  .open-section {
-    color: white;
 
     img {
-      filter: opacity(1);
-    }
-
-    .hobbies-container {
-      img {
-        filter: invert(100%) sepia(35%) saturate(1245%) hue-rotate(211deg) brightness(113%) contrast(100%);
-      }
+      height: 10vmin;
     }
   }
   
@@ -599,29 +496,8 @@
     top: 50%;
     left: 0;
     transform: translate(0, -50%);
+    perspective: 1500px;
   }
-
-  // .arrow {
-  //   position: absolute;
-  //   color: var(--light-on);
-  //   left: 50%;
-  //   transform: translate(-50%, -50%);
-  // }
-
-  // .arrow-1 {
-  //   top: 65%;
-  //   animation: blinkArrow1 linear infinite 5s;
-  // }
-  
-  // .arrow-2 {
-  //   top: 75%;
-  //   animation: blinkArrow2 linear infinite 5s;
-  // }
-  
-  // .arrow-3 {
-  //   top: 85%;
-  //   animation: blinkArrow3 linear infinite 5s;
-  // }
   
   .project {
     height: 100vh;
@@ -673,6 +549,7 @@
     max-height:60vh;
     width: auto;
     height: auto;
+    transform-style: preserve-3d;
   }
   
   .project-title {
@@ -764,6 +641,7 @@
     color: #fff;
     font-size: 8vmin;
     margin: 0;
+    font-family: 'Fredoka One', cursive;
   }
   
   .Contact .button {
