--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -26,10 +26,12 @@
 /* NAV BAR */
 .compass-container {
   position: fixed;
-  top: 1vh;
-  left: 1vw;
-  height: 8vmin;
-  width: 8vmin;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  top: 1vmin;
+  left: 1vmin;
+  height: 10vmin;
+  width: 10vmin;
   cursor: pointer;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
@@ -53,7 +55,7 @@
   top: 50%;
   left: 50%;
   width: 100vw;
-  height: 100vh;
+  height: 90vh;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   display: -webkit-box;
@@ -163,19 +165,19 @@ a:visited {
 
 .Title .wrapper {
   position: absolute;
-  width: 50vmin;
-  height: 50vmin;
+  width: 45vmin;
+  height: 45vmin;
   border-radius: 50%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border: 1vmin solid #4d4dff;
+  border: .8vmin solid #4d4dff;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   -webkit-transform: translate(-50%, -60%);
           transform: translate(-50%, -60%);
-  -webkit-box-shadow: 0 0 100px .5vmin #4d4dff, 0 0 100px .5vmin #4d4dff inset;
-          box-shadow: 0 0 100px .5vmin #4d4dff, 0 0 100px .5vmin #4d4dff inset;
+  -webkit-box-shadow: 0 0 80px .5vmin #4d4dff, 0 0 80px .5vmin #4d4dff inset;
+          box-shadow: 0 0 80px .5vmin #4d4dff, 0 0 80px .5vmin #4d4dff inset;
 }
 
 .Title .ring {
@@ -266,15 +268,15 @@ a:visited {
 }
 
 .Title .ring-1 {
-  width: 100vmin;
-  height: 22vmin;
+  width: 90vmin;
+  height: 19.8vmin;
   -webkit-transform: translate(-50%, -50%) rotate(-20deg);
           transform: translate(-50%, -50%) rotate(-20deg);
 }
 
 .Title .ring-2 {
-  width: 90vmin;
-  height: 18vmin;
+  width: 81vmin;
+  height: 16.2vmin;
   -webkit-transform: translate(-50%, -50%) rotate(-20deg);
           transform: translate(-50%, -50%) rotate(-20deg);
 }
@@ -286,43 +288,11 @@ a:visited {
   left: 50%;
   -webkit-transform: translate(-50%, -60%) rotate(-20deg);
           transform: translate(-50%, -60%) rotate(-20deg);
-  font-size: 14vmin;
+  font-size: 12.6vmin;
   color: transparent;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   line-height: 1em;
-}
-
-.Title .rocket-container {
-  height: 35vmin;
-  width: 35vmin;
-  position: absolute;
-  top: 75%;
-  left: 75%;
-  -webkit-transform: translate(-50%, -50%) rotate(60deg);
-          transform: translate(-50%, -50%) rotate(60deg);
-}
-
-.Title .rocket-container img {
-  max-height: 100%;
-  max-width: 100%;
-  -webkit-filter: invert(97%) sepia(11%) saturate(1152%) hue-rotate(292deg) brightness(108%) contrast(105%);
-          filter: invert(97%) sepia(11%) saturate(1152%) hue-rotate(292deg) brightness(108%) contrast(105%);
-}
-
-.Title .job {
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  text-align: center;
-  position: absolute;
-  bottom: 10vh;
-  left: 80%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  font-size: 4vmin;
-  color: var(--light-off);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  white-space: nowrap;
 }
 
 .Title .text span {
@@ -337,6 +307,396 @@ a:visited {
           animation: blink linear infinite 2.5s;
   -webkit-animation-delay: 3s;
           animation-delay: 3s;
+}
+
+.astro-container {
+  position: absolute;
+  top: 85%;
+  left: 75%;
+  -webkit-transform: translate(0, 100vh) rotate(15deg);
+          transform: translate(0, 100vh) rotate(15deg);
+}
+
+.animate-astro {
+  -webkit-animation: no-gravity 10000ms linear infinite;
+          animation: no-gravity 10000ms linear infinite;
+}
+
+.astro-body {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  height: 12vmin;
+  width: 12vmin;
+  background: #fff;
+  border-radius: 50%;
+  border: .4vmin solid black;
+  background: radial-gradient(circle at 80% 20%, white 20%, #000);
+  -webkit-box-shadow: inset 0.8vmin -0.8vmin 4vmin 0 #282828;
+          box-shadow: inset 0.8vmin -0.8vmin 4vmin 0 #282828;
+}
+
+.body-strap {
+  height: 12vmin;
+  width: .8vmin;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: -1;
+  background-color: orange;
+  border-radius: 35%;
+  -webkit-box-shadow: 0 0 .2vmin .1vmin black;
+          box-shadow: 0 0 .2vmin .1vmin black;
+}
+
+.left-strap {
+  -webkit-transform: translate(-50%, -50%) rotate(54deg);
+          transform: translate(-50%, -50%) rotate(54deg);
+}
+
+.right-strap {
+  -webkit-transform: translate(-50%, -50%) rotate(-54deg);
+          transform: translate(-50%, -50%) rotate(-54deg);
+}
+
+.control-panel {
+  position: absolute;
+  width: 6.4vmin;
+  height: 4.8vmin;
+  border: 1px solid black;
+  -webkit-box-shadow: -.2vmin .2vmin .3vmin .1vmin black;
+          box-shadow: -.2vmin .2vmin .3vmin .1vmin black;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background: radial-gradient(circle at 80% 20%, white 10%, #000);
+}
+
+.line {
+  position: absolute;
+  left: 35%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 3.2vmin;
+  height: .4vmin;
+  background-color: black;
+  border-radius: 1vmin;
+}
+
+.line-a {
+  top: 30%;
+}
+
+.line-b {
+  top: 50%;
+}
+
+.line-c {
+  top: 70%;
+}
+
+.control-button {
+  height: .8vmin;
+  width: .8vmin;
+  border: .1vmin solid black;
+  position: absolute;
+  border-radius: 50%;
+  left: 80%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: orange;
+  -webkit-box-shadow: inset -0.1vmin 0.1vmin 0.2vmin 0px black;
+          box-shadow: inset -0.1vmin 0.1vmin 0.2vmin 0px black;
+}
+
+.c-b-a {
+  top: 35%;
+}
+
+.c-b-b {
+  top: 65%;
+}
+
+.arm {
+  position: absolute;
+  height: 4vmin;
+  width: 4vmin;
+  background: #fff;
+  border-radius: 50%;
+  top: 30%;
+  border: .4vmin solid black;
+}
+
+.left-arm {
+  left: 0;
+  -webkit-transform: translate(-80%, -50%);
+          transform: translate(-80%, -50%);
+  background: radial-gradient(circle at 80% 20%, #969696 50%, #000);
+}
+
+.right-arm {
+  right: 0;
+  -webkit-transform: translate(80%, -50%);
+          transform: translate(80%, -50%);
+  background: radial-gradient(circle at 80% 20%, #969696 50%, #000);
+}
+
+.leg {
+  position: absolute;
+  height: 4vmin;
+  width: 4vmin;
+  background: #fff;
+  border-radius: 50%;
+  top: 85%;
+  border: .4vmin solid black;
+  background: radial-gradient(circle at 80% 20%, #969696 50%, #000);
+}
+
+.left-leg {
+  left: 0;
+}
+
+.right-leg {
+  right: 0;
+}
+
+.astro-head {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, -90%);
+          transform: translate(-50%, -90%);
+  height: 24vmin;
+  width: 24vmin;
+  background: #fff;
+  border-radius: 50%;
+  border: .4vmin solid black;
+  background: radial-gradient(circle at 80% 20%, white 70%, #000);
+  -webkit-box-shadow: inset 1vmin -1vmin 5vmin 0px #282828;
+          box-shadow: inset 1vmin -1vmin 5vmin 0px #282828;
+}
+
+.visor {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  height: 19.2vmin;
+  width: 22.4vmin;
+  background-color: #000;
+  border-radius: 50%;
+  background: radial-gradient(circle at 80% 20%, rgba(20, 20, 20, 0.7) 0%, #000);
+  border: .4vmin solid black;
+}
+
+.ear {
+  position: absolute;
+  border: .3vmin solid black;
+  height: 6.4vmin;
+  width: 2.4vmin;
+  border-radius: 50%;
+  top: 50%;
+  background-color: #fff;
+}
+
+.left-ear {
+  left: 0;
+  -webkit-transform: translate(-60%, -50%);
+          transform: translate(-60%, -50%);
+  background: radial-gradient(circle at 50% 0%, #787878 0%, #464646);
+}
+
+.right-ear {
+  right: 0;
+  -webkit-transform: translate(60%, -50%);
+          transform: translate(60%, -50%);
+  background: radial-gradient(circle at 50% 0%, #c2c2c2 0%, #b0b1b0);
+  -webkit-box-shadow: -.2vmin 0vmin .2vmin .2vmin black;
+          box-shadow: -.2vmin 0vmin .2vmin .2vmin black;
+}
+
+.inner-ear {
+  position: absolute;
+  top: 50%;
+  height: 4vmin;
+  width: .8vmin;
+  border: 0.1vmin solid black;
+  border-radius: 50%;
+}
+
+.left-inner {
+  -webkit-box-shadow: -.1vmin 0vmin .2vmin .2vmin black;
+          box-shadow: -.1vmin 0vmin .2vmin .2vmin black;
+  left: 30%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.right-inner {
+  -webkit-box-shadow: -.2vmin 0vmin .2vmin .2vmin black;
+          box-shadow: -.2vmin 0vmin .2vmin .2vmin black;
+  right: 30%;
+  -webkit-transform: translate(50%, -50%);
+          transform: translate(50%, -50%);
+}
+
+.astro-button {
+  position: absolute;
+  height: 1.2vmin;
+  width: 1.2vmin;
+  border-radius: 50%;
+  border: .1vmin solid black;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.astro-button-a {
+  bottom: 0;
+  left: 60%;
+  background-color: green;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-box-shadow: inset -0.1vmin 0.1vmin 0.2vmin 0px black;
+          box-shadow: inset -0.1vmin 0.1vmin 0.2vmin 0px black;
+}
+
+.astro-button-b {
+  bottom: 0;
+  left: 66%;
+  background-color: yellow;
+  -webkit-transform: translate(-50%, -90%);
+          transform: translate(-50%, -90%);
+  -webkit-box-shadow: inset -0.1vmin 0.1vmin 0.2vmin 0px black;
+          box-shadow: inset -0.1vmin 0.1vmin 0.2vmin 0px black;
+}
+
+.astro-button-c {
+  bottom: 0;
+  left: 72%;
+  background-color: red;
+  -webkit-transform: translate(-50%, -130%);
+          transform: translate(-50%, -130%);
+  -webkit-box-shadow: inset -0.1vmin 0.1vmin 0.2vmin 0px black;
+          box-shadow: inset -0.1vmin 0.1vmin 0.2vmin 0px black;
+}
+
+@-webkit-keyframes no-gravity {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(15deg);
+            transform: translate(0, 0) rotate(15deg);
+  }
+  12% {
+    -webkit-transform: translate(-1vmin, -1vmin) rotate(20deg);
+            transform: translate(-1vmin, -1vmin) rotate(20deg);
+  }
+  24% {
+    -webkit-transform: translate(0px, -2vmin) rotate(16deg);
+            transform: translate(0px, -2vmin) rotate(16deg);
+  }
+  36% {
+    -webkit-transform: translate(1vmin, -1vmin) rotate(14deg);
+            transform: translate(1vmin, -1vmin) rotate(14deg);
+  }
+  48% {
+    -webkit-transform: translate(0, 0) rotate(21deg);
+            transform: translate(0, 0) rotate(21deg);
+  }
+  60% {
+    -webkit-transform: translate(-1vmin, 1vmin) rotate(18deg);
+            transform: translate(-1vmin, 1vmin) rotate(18deg);
+  }
+  72% {
+    -webkit-transform: translate(0, 2vmin) rotate(16deg);
+            transform: translate(0, 2vmin) rotate(16deg);
+  }
+  84% {
+    -webkit-transform: translate(1vmin, 1vmin) rotate(21deg);
+            transform: translate(1vmin, 1vmin) rotate(21deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(15deg);
+            transform: translate(0, 0) rotate(15deg);
+  }
+}
+
+@keyframes no-gravity {
+  0% {
+    -webkit-transform: translate(0, 0) rotate(15deg);
+            transform: translate(0, 0) rotate(15deg);
+  }
+  12% {
+    -webkit-transform: translate(-1vmin, -1vmin) rotate(20deg);
+            transform: translate(-1vmin, -1vmin) rotate(20deg);
+  }
+  24% {
+    -webkit-transform: translate(0px, -2vmin) rotate(16deg);
+            transform: translate(0px, -2vmin) rotate(16deg);
+  }
+  36% {
+    -webkit-transform: translate(1vmin, -1vmin) rotate(14deg);
+            transform: translate(1vmin, -1vmin) rotate(14deg);
+  }
+  48% {
+    -webkit-transform: translate(0, 0) rotate(21deg);
+            transform: translate(0, 0) rotate(21deg);
+  }
+  60% {
+    -webkit-transform: translate(-1vmin, 1vmin) rotate(18deg);
+            transform: translate(-1vmin, 1vmin) rotate(18deg);
+  }
+  72% {
+    -webkit-transform: translate(0, 2vmin) rotate(16deg);
+            transform: translate(0, 2vmin) rotate(16deg);
+  }
+  84% {
+    -webkit-transform: translate(1vmin, 1vmin) rotate(21deg);
+            transform: translate(1vmin, 1vmin) rotate(21deg);
+  }
+  100% {
+    -webkit-transform: translate(0, 0) rotate(15deg);
+            transform: translate(0, 0) rotate(15deg);
+  }
+}
+
+#talkbubble {
+  width: 23vmin;
+  height: 10vmin;
+  background: white;
+  position: absolute;
+  border-radius: 3vmin;
+  left: -15vmin;
+  top: -42vmin;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 2.6vmin;
+  white-space: nowrap;
+  opacity: 0;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+}
+
+#talkbubble:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0%;
+  width: 0;
+  height: 0;
+  -webkit-transform: translate(0, 1.5vmin);
+          transform: translate(0, 1.5vmin);
+  border-top: 2vmin solid white;
+  border-left: 2vmin solid transparent;
+  border-right: 2vmin solid transparent;
 }
 
 @-webkit-keyframes blinkArrow1 {
@@ -688,83 +1048,6 @@ a:visited {
 }
 
 /* ------------------------------------------ ABOUT --------------------------------- */
-@-webkit-keyframes no-gravity {
-  0% {
-    -webkit-transform: translate(0%, 0%);
-            transform: translate(0%, 0%);
-  }
-  13% {
-    -webkit-transform: translate(-5%, -4%);
-            transform: translate(-5%, -4%);
-  }
-  26% {
-    -webkit-transform: translate(0%, -7%);
-            transform: translate(0%, -7%);
-  }
-  39% {
-    -webkit-transform: translate(5%, -4%);
-            transform: translate(5%, -4%);
-  }
-  52% {
-    -webkit-transform: translate(0%, 0%);
-            transform: translate(0%, 0%);
-  }
-  65% {
-    -webkit-transform: translate(-5%, 4%);
-            transform: translate(-5%, 4%);
-  }
-  78% {
-    -webkit-transform: translate(0%, 7%);
-            transform: translate(0%, 7%);
-  }
-  91% {
-    -webkit-transform: translate(5%, 4%);
-            transform: translate(5%, 4%);
-  }
-  100% {
-    -webkit-transform: translate(0%, 0%);
-            transform: translate(0%, 0%);
-  }
-}
-@keyframes no-gravity {
-  0% {
-    -webkit-transform: translate(0%, 0%);
-            transform: translate(0%, 0%);
-  }
-  13% {
-    -webkit-transform: translate(-5%, -4%);
-            transform: translate(-5%, -4%);
-  }
-  26% {
-    -webkit-transform: translate(0%, -7%);
-            transform: translate(0%, -7%);
-  }
-  39% {
-    -webkit-transform: translate(5%, -4%);
-            transform: translate(5%, -4%);
-  }
-  52% {
-    -webkit-transform: translate(0%, 0%);
-            transform: translate(0%, 0%);
-  }
-  65% {
-    -webkit-transform: translate(-5%, 4%);
-            transform: translate(-5%, 4%);
-  }
-  78% {
-    -webkit-transform: translate(0%, 7%);
-            transform: translate(0%, 7%);
-  }
-  91% {
-    -webkit-transform: translate(5%, 4%);
-            transform: translate(5%, 4%);
-  }
-  100% {
-    -webkit-transform: translate(0%, 0%);
-            transform: translate(0%, 0%);
-  }
-}
-
 .About {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -782,11 +1065,11 @@ a:visited {
 .portrait-container {
   height: 30vmin;
   width: 30vmin;
-  border: 10px solid white;
+  border: 1vmin solid white;
   -webkit-box-shadow: 0 0 2vmin .5vmin #fff, 0 0 3vmin .8vmin #fff inset;
           box-shadow: 0 0 2vmin .5vmin #fff, 0 0 3vmin .8vmin #fff inset;
   position: absolute;
-  top: 50%;
+  top: 20%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -795,8 +1078,8 @@ a:visited {
   border-top-right-radius: 40%;
   border-bottom-right-radius: 50%;
   border-bottom-left-radius: 40%;
-  -webkit-animation: squigglyBorder 3000ms infinite;
-          animation: squigglyBorder 3000ms infinite;
+  -webkit-animation: squigglyBorder 3000ms  linear infinite;
+          animation: squigglyBorder 3000ms  linear infinite;
 }
 
 .portrait-container img {
@@ -876,36 +1159,50 @@ a:visited {
 
 .description {
   position: absolute;
-  top: 10%;
+  top: 40%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
   width: 100%;
+  max-width: 1000px;
+  height: 50%;
   text-align: center;
-}
-
-.tech-icon-container {
-  position: absolute;
-  top: 80%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  border: 1px solid red;
-  height: 15vmin;
-  width: 60vmin;
+  font-size: 1em;
+  padding: 0 2.5vw;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  line-height: 1.5em;
+}
+
+.description p:nth-of-type(1) {
+  font-size: 1.25em;
+}
+
+.flags-container {
+  width: 80%;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-.tech-icon-container img {
-  height: 10vmin;
+.flags-container img {
+  height: 8vmin;
 }
 
 /* ----------------------------------- PROJECTS VIEW ------------------------------------ */
