--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,12 +9,15 @@
 
 .App {
   overflow: hidden;
+  background-color: black;
   background-image: url(../space.jpg);
   background-size: 1000px;
   background-repeat: repeat;
   height: 600vh;
   width: 600vw;
   position: relative;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
 }
 
 ::-webkit-scrollbar {
