--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,12 +9,14 @@
   
   .App {
     overflow: hidden;
+    background-color: black;
     background-image: url(../space.jpg);
     background-size: 1000px;
     background-repeat: repeat;
     height: 600vh;
     width: 600vw;
     position: relative;
+    transition: all 300ms ease-in-out;
   }
 
   ::-webkit-scrollbar {
